custom properties dont appear in quick favourites #106395

Closed
opened 2023-03-31 18:00:26 +02:00 by michael campbell · 1 comment

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.5.0 Alpha, branch: main (modified), commit date: 2023-02-10 02:18, hash: rBc2c62c3618ee
Worked: (newest version of Blender that worked as expected)

Short description of error
custom properties don't appear in quick favourites

Exact steps for others to reproduce the error

  1. open blend file
  2. click foot shaped bone in pose mode
  3. in the item tab of the 3d viewports n panel, righ click ik mode (in properties), and add it to quick favourites
  4. open quick favourites, property isn't there.

see video for quick example.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.5.0 Alpha, branch: main (modified), commit date: 2023-02-10 02:18, hash: `rBc2c62c3618ee` Worked: (newest version of Blender that worked as expected) **Short description of error** custom properties don't appear in quick favourites **Exact steps for others to reproduce the error** 1. open blend file 2. click foot shaped bone in pose mode 3. in the item tab of the 3d viewports n panel, righ click ik mode (in properties), and add it to quick favourites 4. open quick favourites, property isn't there. see video for quick example.
michael campbell added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-31 18:00:27 +02:00
Richard Antalik added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-31 19:58:17 +02:00
Member

Will put on my desk to check on.

Will put on my desk to check on.
Philipp Oeser self-assigned this 2023-06-02 13:40:04 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-08 10:37:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106395
No description provided.